Prevent gallery from covering sidebar border [PUB-108]

--- a/frontend/scss/pages/_p-issuearticle-show.scss
+++ b/frontend/scss/pages/_p-issuearticle-show.scss
@@ -18,6 +18,7 @@
     position: absolute;
     background-color: $color__rules--primary;
     width: 1px;
+    z-index: 1;
 
     @include breakpoint('large+') {
       content: '';
